syntax = "proto3";

package temporal.bridge;

// Newsletter service for managing newsletter workflows
service NewsletterService {
  rpc SendNewsletter(NewsletterRequest) returns (NewsletterResponse);
  rpc GetNewsletterStatus(NewsletterStatusRequest) returns (NewsletterStatusResponse);
  rpc CancelNewsletter(CancelNewsletterRequest) returns (CancelNewsletterResponse);
}

// Generic workflow service for other temporal workflows
service WorkflowService {
  rpc StartWorkflow(WorkflowRequest) returns (WorkflowResponse);
  rpc GetWorkflowResult(WorkflowResultRequest) returns (WorkflowResultResponse);
  rpc SignalWorkflow(WorkflowSignalRequest) returns (WorkflowSignalResponse);
  rpc CancelWorkflow(WorkflowCancelRequest) returns (WorkflowCancelResponse);
}

// Newsletter related messages
message NewsletterRequest {
  string newsletter_id = 1;
  string tenant_id = 2;
  string user_id = 3;
  string group_uuid = 4;
  string subject = 5;
  string content = 6;
  repeated NewsletterRecipient recipients = 7;
  NewsletterMetadata metadata = 8;
}

message NewsletterRecipient {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
}

message NewsletterMetadata {
  repeated string tags = 1;
}

message NewsletterResponse {
  bool success = 1;
  string workflow_id = 2;
  string run_id = 3;
  string newsletter_id = 4;
  string group_uuid = 5;
  string error = 6;
}

message NewsletterStatusRequest {
  string workflow_id = 1;
}

message NewsletterStatusResponse {
  bool success = 1;
  string newsletter_id = 2;
  int32 successful = 3;
  int32 failed = 4;
  int32 total = 5;
  string group_uuid = 6;
  string completed_at = 7;
  string status = 8;
  string error = 9;
}

message CancelNewsletterRequest {
  string workflow_id = 1;
}

message CancelNewsletterResponse {
  bool success = 1;
  string error = 2;
}

// Generic workflow messages
message WorkflowRequest {
  string workflow_type = 1;
  string workflow_id = 2;
  string input = 3; // JSON serialized input
}

message WorkflowResponse {
  bool success = 1;
  string workflow_id = 2;
  string run_id = 3;
  string error = 4;
}

message WorkflowResultRequest {
  string workflow_id = 1;
}

message WorkflowResultResponse {
  bool success = 1;
  string result = 2; // JSON serialized result
  string error = 3;
}

message WorkflowSignalRequest {
  string workflow_id = 1;
  string signal_name = 2;
  string payload = 3; // JSON serialized payload
}

message WorkflowSignalResponse {
  bool success = 1;
  string error = 2;
}

message WorkflowCancelRequest {
  string workflow_id = 1;
}

message WorkflowCancelResponse {
  bool success = 1;
  string error = 2;
}


